--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ lazy-object-proxy==1.5.2
 MarkupSafe==1.1.1
 mccabe==0.6.1
 msrest==0.6.21
-mysqlclient==2.0.1
+mysqlclient
 numpy==1.20.1
 oauthlib==3.1.0
 opencv-python==4.5.1.48
